service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
spec:
  type: NodePort
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080  # You can choose any port in the range 30000-32767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main
          image: localhost:5000/main:latest
          ports:
            - containerPort: 8000
